--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "promise": "^8.0.3",
+    "sharp": "^0.22.1",
     "yargs": "^13.2.2"
   },
   "devDependencies": {
